fixed navigation collapse

--- a/_src/_includes/scss/abstracts/_tokens.scss
+++ b/_src/_includes/scss/abstracts/_tokens.scss
@@ -72,7 +72,7 @@ $site-nav-link-background: transparent;
 $site-nav-link-background-hover: var(--primary-50);
 $site-nav-link-background-active: var(--primary-900);
 
-$site-nav-link-padding: var(--space-xs) var(--space-m);
+$site-nav-link-padding: var(--space-xs) var(--space-s);
 $site-nav-link-border-radius:var(--space-3xs);
 
 $site-nav-link-text-decoration: none;
