--- a/_src/_includes/scss/blocks/_hamburger.scss
+++ b/_src/_includes/scss/blocks/_hamburger.scss
@@ -49,7 +49,7 @@
 
 
 
-@media (width > 1150px) {
+@media (width > 1050px) {
     .hamburger {
         display: none;
     }
