--- a/_src/_includes/scss/blocks/_site-nav.scss
+++ b/_src/_includes/scss/blocks/_site-nav.scss
@@ -68,7 +68,7 @@
 
 
 // Media query
-@media (width > 1150px) {
+@media (width > 1050px) {
     .site-nav {
         display: flex;
         padding-block: 0;
